tree-sitter/tree-sitter-spthy/grammar.js
      theory: $ => seq(
          'theory',
          field('theory_name', $.ident),
          optional(seq('configuration', ':', '"', $.commandline , '"')),
          'begin',
          repeat($._body_item),
          'end',
          repeat(
              /./
          )
      ),

      _body_item: $ => choice(
          $.preprocessor,
          $._signature_spec,
          $.global_heuristic,
          $.tactic,
          $.process,  // SAPIC+
          $.let,
          $.export,
          $._rule,
          $.restriction,
          $.case_test,
          $._lemma,
          $.formal_comment
      ),


      /*
       * Preprocessor:
       */
      preprocessor: $ => choice(
          $.ifdef,
          $.define,
          $.include
      ),

      ifdef: $ => seq(
          '#ifdef',
          field('condition', $._ifdef_formula),
          field('consequence', repeat($._body_item)),
          optional(seq(
              '#else',
              field('alternative', repeat($._body_item))
          )),
          '#endif'
      ),

      _ifdef_formula: $ => choice(
          $.ifdef_nested,
          $.ifdef_or,
          $.ifdef_and,
          $.ifdef_not,
          $.ident
      ),

      functions: $ => prec.right(seq(
          'functions',
          ':',
          $._function_sym,
          repeat(seq(
              ',',
              $._function_sym
          )),
          optional(',')
      )),

      _function_sym: $ => choice(
          $.function_untyped,
          $.function_typed
      ),

      function_untyped: $ => seq(
          field('function_identifier', $.ident),
          '/',
          field('arity', $.natural),
          optional ( seq (
              '[',
                  $.function_attribute,
                  repeat(seq(
                      ',',
                      $.function_attribute
                  )),
                  optional(',')
              ,']')
          )
      ),

      global_heuristic: $ => seq(
          'heuristic',
          ':',
          optional($._heuristic_leading_space),
          field('heuristic', $.heuristic),
          $._heuristic_end
      ),

      // The initial token follows the ordinary lexer; subsequent tokens allow
      // only ASCII spaces. Comments must explicitly end the sequence because
      // named extras can otherwise be skipped even before immediate tokens.
      _heuristic_leading_space: $ => repeat1(choice(whitespace, $.single_comment, $.multi_comment)),

      _heuristic_end: $ => choice(
          token.immediate(seq(/ */, nonSpaceWhitespace)),
          $.single_comment,
          $.multi_comment
      ),

      heuristic: $ => repeat1(choice(
          alias($._heuristic_builtin, $.builtin_ranking),
          $.oracle_ranking,
          $.tactic_reference
      )),

      builtin_ranking: $ => builtinRanking(),

      _heuristic_builtin: $ => token.immediate(prec(1, seq(/ */, builtinRanking()))),

      oracle_ranking: $ => prec.right(seq(
          token.immediate(prec(1, / *[Oo]/)),
          optional(field('path', $.oracle_path))
      )),

      oracle_path: $ => token.immediate(seq(/ */, '"', /[^"\n\r]+/, '"')),

      tactic_reference: $ => seq(
          token.immediate(/ *\{ */),
          field('name', $.tactic_name),
          token.immediate('}')
      ),

      tactic_name: $ => token.immediate(/[^"\n\r{}]+/),


      /*
       * Tactic:
       */
      process: $ => seq(
          'process', ':',
          $._process
      ),

      _process: $ => choice(
          $._elementary_process,
          $._extended_process,
          $._stateful_process,
          $.inline_msr_process,
          $.nested_process,
          $.location_process,
          $.predefined_process

      ),

      output: $ => prec.right(choice(
          seq(
              'out', '(', $.mset_term, ',', $.mset_term, ')',
              optional(seq(';', $._process))
          ),
          seq(
              'out', '(', $.mset_term, ')',
              optional(seq(';', $._process))
          )
      )),

      input: $ => prec.right(choice(
          seq(
              'in', '(', $.mset_term, ',', $.mset_term, ')',
              optional(seq(';', $._process))
          ),
          seq(
              'in', '(', $.mset_term, ')',
              optional(seq(';', $._process))
          )
      )),

      conditional: $ => prec.right('CONDITIONAL', seq(
          'if', field('condition', $._condition),
          'then', field('then', $._process),
          optional(seq('else', field('else', $._process)))
      )),

      null: $ => '0',

      // extended processes:
      _condition: $ => choice(
          $.equality_check,
          $._formula
      ),

      equality_check: $ => seq(
          $.mset_term, token(prec(1, '=')), $.mset_term
      ),


      /*
       * Top-level let-block:
       */
      rule: $ => seq(
          $.simple_rule,
          optional($.variants)
      ),

      simple_rule: $ => seq(
          'rule',
          optional($.modulo),
          field('rule_identifier', $.ident),
          optional($.rule_attrs),
          ':',
          optional($.rule_let_block),
          $.premise,
          choice(
              '-->',
              $.action_fact
          ),
          $.conclusion
      ),

      premise: $ => seq(
          '[', optional($._facts), ']'
      ),

      conclusion: $ => seq(
          '[', optional($._facts), ']'
      ),

      rule_attrs: $ => seq(
          '[',
          $.rule_attr,
          repeat(seq(
              ',',
              $.rule_attr
          )),
          optional(','),
          ']'
      ),

      rule_attr: $ => choice(
            $.rule_attr_color,
            'no_derivcheck',
            'issapicrule',
            $.rule_process,
            $.rule_role,
            $.rule_extended_attribute
            ),

      rule_role: $ => seq(
          'role',
          '=',
          choice(
              seq(
                  '"',
                  optional(field('role_identifier', alias(token.immediate(/[^"\r\n]+/), $.ident))),
                  '"'
              ),
              seq(
                  "'",
                  optional(field('role_identifier', alias(token.immediate(/[^'\r\n]+/), $.ident))),
                  "'"
              )
          )
      ),

      _facts: $ => prec.left(seq(
          $._fact,
          repeat(seq(
              ',',
              $._fact
          )),
          optional(',')
      )),

      _fact: $ => choice(
          $.linear_fact,
          $.persistent_fact
      ),

      linear_fact: $ => $._base_fact,

      _base_fact: $ => prec.left(seq(
          field('fact_identifier', alias($.fact_identifier, $.ident)),
          '(',
          optional($.arguments),
          ')',
          optional($.fact_annotes)
      )),

      lemma: $ => seq(
          'lemma',
          optional($.modulo),
          field('lemma_identifier', $.ident),
          optional($.lemma_attrs),
          ':',
          optional($.trace_quantifier),
          '"', field('formula', $._formula), '"',
          optional(field('proof_skeleton', $._proof_skeleton))
      ),

      lemma_attr: $ => choice(
          'typing', // Legacy alias for sources, still accepted by Haskell.
          'sources',
          'reuse',
          'diff_reuse',
          'use_induction',
          seq('output', '=', '[', commaSep($.language), ']'),
          seq('hide_lemma', '=', $.ident),
          seq('heuristic', '=',
              optional($._heuristic_leading_space),
              field('heuristic', $.heuristic),
              optional(choice($.single_comment, $.multi_comment)))
      ),

      trace_quantifier:  $ => choice(
          'all-traces',
          'exists-trace'
      ),


      /*
       * Proof:
       */
      _proof_skeleton: $ => choice(
          $.solved,
          $.mirrored,
          $.by_method,
          $.method_skeleton,
          $.cases
      ),

      action_constraint: $ => seq(
          $._fact,
          '@',
          $.temporal_var
      ),

      _term: $ => choice(
          $.tuple_term,
          $.nested_term,
          $.nullary_fun,
          $.binary_app,
          $.nary_app,
          $._literal
      ),

      tuple_term: $ => prec('TUPLE', seq(
          '<',
          optional(seq(
              field('left', $.mset_term),
              repeat(seq(
                ',',
                field('right', $.mset_term)
              ))
          )),
          '>'
      )),

      mset_term: $ => prec.left('MUL_SET', seq(
          field('left', $.nat_term),
          repeat(seq(
            choice('++', '+'),
            field('right', $.nat_term)
          ))
      )),

      nat_term: $ => prec.left('ADD', seq(
          field('left', $.xor_term),
          repeat(seq(
            '%+',
            field('right', $.xor_term)
          ))
      )),

      xor_term: $ => prec.left('EXCLUSIVE_OR', seq(
          field('left', $.mul_term),
          repeat(seq(
            choice('XOR', '⊕'),
            field('right', $.mul_term)
          ))
      )),

      mul_term: $ => prec.left('MULTIPLY', seq(
          field('left', $.exp_term),
          repeat(seq(
            '*',
            field('right', $.exp_term)
          ))
      )),

      exp_term: $ => prec.right('EXPONENTIAL', seq(
          field('base', $._term),
          repeat(seq(
             '^',
            field('exponent', $._term)
          ))
      )),

      nary_app: $ => prec('FUNCTION', seq(
          field('function_identifier', $._term_ident),
          '(', $.arguments, ')'
      )),

      arguments: $ => seq(
          field('argument', choice($.mset_term, $.temporal_var)),
          repeat(seq(
              ',', field('argument', $.mset_term)
          ))
      ),




      // Variable:
      msg_var_or_nullary_fun: $ => prec('VARIABLE' ,seq(
          field('variable_identifier', $._term_ident), // 'msg' sort prefix
          optional(seq(
              '.',
              $.natural
          )),
          optional(seq( // 'msg' sort suffix
              ':',
              'msg'
          ))
      )),

      temporal_var: $ => choice(
          seq( // 'temporal' sort prefix
              '#',
              field('variable_identifier', $._term_ident),
              optional(seq(
                  '.', $.natural
              ))
          ),
          seq( // 'temporal' sort suffix
              field('variable_identifier', $._term_ident),
              optional(seq(
                  '.', $.natural
              )),
              ':', 'node'
          )
      ),

      pub_name: $ =>  seq( // fixed, public name
          "'",
          /[^\n']+/,
          "'"
      ),

      _formula: $ => choice(
          $.iff,
          $.imp,
          $.disjunction,
          $.conjunction,
          $.negation,
          $.nested_formula,
          $._temporal_variable_operation,
          $.action_constraint,
          $.term_eq,
          $.subterm_rel,
          $.lesser_check,
          $.quantified_formula,
          $.atom,
          $.predicate_ref,
          $.pre_defined
      ),

      conjunction: $ => prec.left('LOGICAL_AND', seq(
          field('left', $._formula),
          choice('&', '∧'),
          field('right', $._formula)
      )),

      negation: $ => prec('LOGICAL_NOT', seq(
          choice('not', '¬'),
          field('formula', $._formula),
      )),

      nested_formula: $ => prec('ATOM', seq(
          '(', $._formula, ')'
      )),

      action_constraint: $ => prec('ATOM', seq(
          field('fact', $._fact),
          '@',
          field('variable', alias($.temporal_var_optional_prefix, $.temporal_var))
      )),

      term_eq: $ => prec('ATOM', seq(
          field('left', $.mset_term),
          '=',
          field('right', $.mset_term)
      )),

      subterm_rel: $ => prec('ATOM', seq(
          field('left', $.mset_term),
          choice('<<', '⊏'),
          field('right', $.mset_term)
      )),

      lesser_check: $ => prec('ATOM', seq(
          field('left', $.mset_term),
          '(<)',
          field('right', $.mset_term)
      )),

      quantified_formula: $ => prec('QUANTIFIER', seq(
          choice('Ex', '∃', 'All', '∀'),
          field('variable', repeat1($._lvar)),
          '.',
          field('formula', $._formula)
      )),

      atom: $ => prec('ATOM', choice(
          '⊥', 'F', '⊤', 'T', // True, False
      )),

      _lvar: $ => choice(
          $.temporal_var,
          $._non_temporal_var
      ),

      // predicate reference that is substituted with the predicate by Tamarin
      predicate_ref: $ => prec('FUNCTION', seq(
          field('predicate_identifier', $._term_ident),
          '(', optional($.arguments), ')'
      )),

      // some predefined function, let_block, ...
      _term_ident: $ => choice(
          $.ident,
          alias($.fact_identifier, $.ident)
      ),


      /*
       * Terminals:
       */
      ident: $ => /[A-Za-z0-9]\w*/,

      natural: $ => /[0-9]+/,

      formal_comment: $ => seq(
          field('comment_identifier', $.ident),
          token(seq(
              '{*',
              /[^*]*\*+([^}*][^*]*\*+)*/,
              '}'
          ))
      )

  }
});

// A tactic presort selects one builtin; a heuristic can concatenate these
// with oracle rankings. Keep their shared alphabet in one place.
// Literal choices also give presorts the grammar's identifier boundaries.
function builtinRanking() {
    return choice('C', 'I', 'S', 'P', 'c', 'i', 's', 'p');
}

// Match the Haskell parser's list: zero or more items with a trailing comma.
function commaSep(rule) {
    return optional(seq(rule, repeat(seq(',', rule)), optional(',')));
}
